# discord-proxy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.override.example.yaml  compose.yaml  pyproject.toml
examples/: envelope_peek.py  firehose.py  rate_meter.py  replay.py  rest_classify_sniff.py  schema_sniff.py  subject_tree.py
src/discord_proxy/: addon.py  config.py  envelope.py  nats_client.py
src/discord_proxy/gateway/: addon.py  codec.py  events.py
src/discord_proxy/rest/: addon.py  routes.py
tests/: test_codec.py  test_events.py  test_rest_addon.py  test_routes.py
