[project]
name = "discord-proxy"
version = "0.0.1"
description = "Passive mitmproxy addon that decodes Discord desktop client traffic and publishes normalized events to NATS"
readme = "README.md"
authors = [
    { name = "Matthew Harris", email = "byte@byteflux.net" }
]
requires-python = ">=3.12"
dependencies = [
    "erlpack>=1.0.1",
    "mitmproxy>=12.2.2",
    "nats-py>=2.14.0",
    "zstandard>=0.25.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["discord_proxy"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["erlpack.*", "mitmproxy.*"]
ignore_missing_imports = true
